--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,49 @@
 version: '3.8'
 services:
-  app: &app 
-  build:
-    context: .
-    dockerfile: Dockerfile
-  user: "${APP_UID:-10001}:${APP_GID:-10001}"
-  ports:
-    - '8000:80'
-  environment:
-    LARAVEL_SAIL: 1
-    APP_DEBUG: 'true'
-    REDIS_HOST: redis
-    DB_HOST: mysql
-  volumes:
-    - '${PWD:-./}:/app'
-  depends_on:
-    - mysql
-    - redis
-
-  mysql:
-    image: mariadb:alpine
-    env_file: ".env"
-    environment:
-      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_DATABASE: '${DB_DATABASE}'
-      MYSQL_USER: '${DB_USERNAME}'
-      MYSQL_DB_HOST: '${DB_HOST}'
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+  db:
+    image: postgres:14.4-alpine
+    container_name: pg-db
+    restart: always
     ports:
-      - '3306:3306'
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - 'sailmysql:/var/lib/mysql'
+      - ./storage/_db:/var/lib/postgresql
+
+  webserver:
+    image: nginx:1.21.4-alpine
+    container_name: nginx-webserver
+    restart: always
+    volumes:
+      - ./:/var/www
+      - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
+      - ./storage/docker/logs/nginx/:/var/logs/nginx/
+    ports:
+      - "80:80"
+    links:
+      - app
 
   redis:
-    image: 'redis:alpine'
-    ports:
-      - '${FORWARD_REDIS_PORT:-6379}:6379'
+    image: redis:7-alpine
+    container_name: redis
     volumes:
-      - 'sailredis:/data'
-    healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      - ./storage/_redis:/data:rw
+    ports:
+      - "6379:6379"
 
-  queue:
-    "<<": *app
-    command: php /app/artisan queue:work --memory=256 --sleep=1
-
-  cron:
-    "<<": *app
-    command: supercronic /etc/supercronic/laravel # it runs artisan schedule:run
-
-volumes:
-  sailmysql:
-    driver: local
-  sailredis:
-    driver: local
+  app:
+    build:
+      context: ./
+      dockerfile: ./Dockerfile
+    container_name: app
+    restart: always
+    ports:
+      - ":9000"
+    volumes:
+      - ./:/var/www
+      - ./docker/php/php.ini:/user/local/etc/php/conf.d/extend-php.ini
+    depends_on:
+      - db
