feat: Added simple dynamic routing; feat: Added svg for language-changer; feat: Added images for main page;

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,13 @@
 /public/storage
 /public/css
 /public/fonts
-/public/img
+/public/images
+/public/mix-manifest.json
 /public/js
 /storage/*.key
 /vendor
+.idea
+.vscode
 .env
 .env.backup
 .phpunit.result.cache
@@ -15,11 +18,9 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/.idea
-/.vscode
-
+/composer.lock
 /storage/_db
 /storage/_redis
 /storage/docker
-
+/package-lock.json
 /AdminLTE-3.2.0
