--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,28 @@
-version: '3.8'
+# For more information: https://laravel.com/docs/sail
+version: '3'
+
 services:
-  db:
-    image: postgres:14.4-alpine
-    container_name: pg-db
-    restart: always
-    ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_DB: ${DB_DATABASE}
-      POSTGRES_USER: ${DB_USERNAME}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-    volumes:
-      - ./storage/_db:/var/lib/postgresql
 
-  webserver:
-    image: nginx:1.21.4-alpine
-    container_name: nginx-webserver
-    restart: always
-    volumes:
-      - ./:/var/www
-      - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
-      - ./storage/docker/logs/nginx/:/var/logs/nginx/
-    ports:
-      - "80:80"
-    links:
-      - app
-
-  redis:
-    image: redis:7-alpine
-    container_name: redis
-    volumes:
-      - ./storage/_redis:/data:rw
-    ports:
-      - "6379:6379"
-
-  app:
+  laravel.test:
     build:
-      context: ./
-      dockerfile: ./Dockerfile
-    container_name: app
-    restart: always
+      context: ./vendor/laravel/sail/runtimes/8.1
+      dockerfile: Dockerfile
+      args:
+        WWWGROUP: '${WWWGROUP}'
+    extra_hosts:
+    - 'host.docker.internal:host-gateway'
     ports:
-      - ":9000"
+    - '80:80'
+    environment:
+      WWWUSER: '${WWWUSER}'
+      LARAVEL_SAIL: 1
+      XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+      XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
     volumes:
-      - ./:/var/www
-      - ./docker/php/php.ini:/user/local/etc/php/conf.d/extend-php.ini
-    depends_on:
-      - db
+    - '.:/var/www/html'
+    networks:
+    - sail
+
+networks:
+  sail:
+    driver: bridge
