feat: docker returned to simple variant; feat: run scripts and supervizord; feat: new key-word in locales; feat: templates include bootstrap as cdn; feat: lang buttons changed to modal window; fix: storage premissions;

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,11 @@
-# For more information: https://laravel.com/docs/sail
 version: '3'
-
 services:
-
-  laravel.test:
+  app:
     build:
-      context: ./vendor/laravel/sail/runtimes/8.1
-      dockerfile: Dockerfile
-      args:
-        WWWGROUP: '${WWWGROUP}'
-    extra_hosts:
-    - 'host.docker.internal:host-gateway'
-    ports:
-    - '80:80'
-    environment:
-      WWWUSER: '${WWWUSER}'
-      LARAVEL_SAIL: 1
-      XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
-      XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+      context: .
+      target: ${TARGET:-dev}
+    working_dir: /app
     volumes:
-    - '.:/var/www/html'
-    networks:
-    - sail
-
-networks:
-  sail:
-    driver: bridge
+      - ${PWD:-./}:/${TARGET:-app}
+    ports:
+      - "80:80"
