--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     },
     "dependencies": {
         "autoprefixer": "10.4.5",
-        "bootstrap": "^4.6.1",
-        "bootstrap-icons": "1.8.3",
+        "bootstrap": "4.0.0",
+        "bootstrap-icons": "^1.9.1",
         "copy-webpack-plugin": "^11.0.0",
         "font-awesome": "4.7.0",
-        "jquery": "3.6.0",
+        "jquery": "^3.6.0",
+        "popper.js": "^1.16.1",
         "sass": "^1.52.1",
         "sass-loader": "^13.0.0"
     }
